# jsonq

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
doc/: jsonq_モジュール骨組み.py  jsonq_仕様書（mvp）.md
jsonq/: __init__.py  api.py
jsonq/core/: access.py  core_types.py  dictview.py  missing.py  path.py  seqview.py  value.py
jsonq/operators/: __init__.py  access.py  base.py  missing.py  seq.py
jsonq/operators/access/: __init__.py  core.py
jsonq/operators/functional/: __init__.py  diff.py  serialize.py
jsonq/operators/missing/: __init__.py  core.py
jsonq/operators/sequence/: __init__.py  core.py
jsonq/ops/: diff.py  serialize.py
test/: test_operators.py
tests/: test_operators.py  test_q_api.py  test_value.py
